# fates-app

./: .gitignore  CHANGELOG.md  Design.f0  README.md  README_EN.md  color_hsl_to_hex.py  dribble.md  makeWindowsInstall.bat  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.ts  tips.md  tsconfig.json  update_dep.md  vite.config.js
.github/workflows/: release.yml
api-tests/: README.md  http_server.http
prompt/: noti.pu  prompt.md
scripts/: build.ts  update-version.py
src/: ai-title-optimization.ts  app-config.ts  app.css  app.html  config.ts  holuday-cn.ts  i18n.ts  icons.ts  mouse-tracker.svelte.ts  mouse-tracker.ts  notification_manager.ts  openai.ts  repeat-task.svelte.ts  scheduler.ts  store.ts  tag-manager.svelte.ts  tray-manager.svelte.ts  tray.svelte.ts  types.ts  windows.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json  message-box.json  time-progress-bar.json
src-tauri/icons/: icon.icns
src-tauri/resources/: icon.icns
src-tauri/src/: autostart.rs  calendar.rs  database.rs  error.rs  http_server.rs  lib.rs  main.rs  models.rs  notification_manager.rs  tray.rs  utils.rs
src/components/: sync-Indicator.svelte
src/features/: mouse-tracker.svelte.ts  openai.ts  repeat-task.svelte.ts
src/i18n/: en.json  i18n.ts  zh.json
src/lib/: MessageBoxManager.ts  TimeProgressBarManager.ts  Timeline.svelte  i18n.ts  message-box-manager.ts  time-progress-bar-manager.ts  types.ts  utils.ts
src/locales/: en.json  zh.json
src/platform/: index.ts  indexed-db.ts  pouch-db.ts  tauri.ts  web.ts
src/routes/: +layout.svelte  +page.svelte  app.svelte  data-table-priority-cell.svelte  data-table-repeat-action-cell.svelte  nav.svelte  (+29 more)
(+52 files in other folders)
