[package]
name = "fates-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fates_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [
    "macos-private-api",
    "tray-icon",
    # "custom-protocol", 开启后，无法使用 Dev 启动
] }
rusqlite = { version = "0.32.1", features = ["bundled", "chrono"] }
axum = { version = "0.7.1", features = ["tokio", "http1"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5.0.1"
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
log = "0.4"
tauri-plugin-notification = "2"
chrono = { version = "0.4.38", features = ["serde"] }
tokio = "1.42.0"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
tauri-plugin-store = "2"
tauri-plugin-process = "2"
tauri-plugin-os = "2"
thiserror = "2.0.6"
once_cell = "1.19"
tauri-plugin-http = "2"
chinese_holiday = "2025.1.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26.0"
